--- a/main.tex
+++ b/main.tex
@@ -45,5 +45,6 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{week1-1.tex}
 \import{chapters/}{week1-2.tex}
 \import{chapters/}{week2-1.tex}
+\import{chapters/}{week2-2.tex}
 
 \end{document}
