Half of week 3.

--- a/preamble.tex
+++ b/preamble.tex
@@ -48,7 +48,7 @@
 \newcommand{\vphi}{\varphi}
 \newcommand{\vthe}{\vartheta}
 \newcommand{\II}{I\!I}
-\renewcommand{\emptyset}{\varnothing}
+\renewcommand{\emptyset}{⌀}
 \newcommand{\acts}{\curvearrowright}
 \newcommand{\xrr}{\xlongrightarrow}
 \newcommand{\into}{\hookrightarrow}
@@ -89,5 +89,4 @@
 \setCJKfamilyfont{zhli}{FZLiShu-S01}
 \setCJKfamilyfont{zhyou}{FZXiYuan-M01}[BoldFont=FZZhunYuan-M02]
 
-\geometry{a4paper,margin=1in}
 \allowdisplaybreaks{}
