--- a/main.tex
+++ b/main.tex
@@ -41,10 +41,16 @@ Latex by 薛皓天 (Haotian Xue)}
 \tableofcontents
 \newpage
 \mainmatter{}
+
 \chapter{Introduction}
 \import{chapters/}{week1-1.tex}
 \import{chapters/}{week1-2.tex}
 \import{chapters/}{week2-1.tex}
 \import{chapters/}{week2-2.tex}
+\import{chapters/}{week3-1-remarks.tex}
+
+\chapter{Holomorphic Vector Bundle}
+\import{chapters/}{week3-1-holomorphic.tex}
+\import{chapters/}{week3-2.tex}
 
 \end{document}
