--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,8 @@
 \documentclass[twoside,12pt]{book}
 \input{preamble.tex}
 
+\def\FullBook\@empty
+
 \pagestyle{fancy}
 \setlength{\headheight}{15pt}
 \fancyfoot{}
@@ -47,10 +49,7 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{week1-2.tex}
 \import{chapters/}{week2-1.tex}
 \import{chapters/}{week2-2.tex}
-\import{chapters/}{week3-1-remarks.tex}
-
-\chapter{Holomorphic Vector Bundle}
-\import{chapters/}{week3-1-holomorphic.tex}
+\import{chapters/}{week3-1.tex}
 \import{chapters/}{week3-2.tex}
 
 \end{document}
