--- a/main.tex
+++ b/main.tex
@@ -51,5 +51,7 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{week2-2.tex}
 \import{chapters/}{week3-1.tex}
 \import{chapters/}{week3-2.tex}
+\import{chapters/}{week4-1.tex}
+\import{chapters/}{week4-2.tex}
 
 \end{document}
