--- a/preamble.tex
+++ b/preamble.tex
@@ -76,7 +76,7 @@
 \theoremstyle{definition}\newtheorem*{question}{Question}
 \theoremstyle{definition}\newtheorem*{answer}{Answer}
 \theoremstyle{definition}\newtheorem*{goal}{Goal}
-\theoremstyle{plain}\newtheorem*{application}{Application}
+\theoremstyle{definition}\newtheorem*{application}{Application}
 \theoremstyle{plain}\newtheorem*{exercise}{Exercise}
 \theoremstyle{remark}\newtheorem*{remark}{Remark}
 \theoremstyle{remark}\newtheorem*{note}{\small{Note}}
