--- a/main.tex
+++ b/main.tex
@@ -53,5 +53,7 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{week3-2.tex}
 \import{chapters/}{week4-1.tex}
 \import{chapters/}{week4-2.tex}
+\import{chapters/}{week5-1.tex}
+\import{chapters/}{week5-2.tex}
 
 \end{document}
