--- a/main.tex
+++ b/main.tex
@@ -55,5 +55,8 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{week4-2.tex}
 \import{chapters/}{week5-1.tex}
 \import{chapters/}{week5-2.tex}
+\chapter{}
+\import{chapters/}{week6-1.tex}
+\import{chapters/}{week6-2.tex}
 
 \end{document}
