--- a/preamble.tex
+++ b/preamble.tex
@@ -18,13 +18,30 @@
 \usepackage{derivative}
   \newcommand{\dv}{\odv}
   \newcommand{\pd}[1]{\pdv{}{#1}}
-  \newcommand{\eval}[1]{#1\Big|}
+  \newcommand{\eval}[1]{#1\big|}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{tikz}
 \usepackage{tikz-3dplot}
 % \usepackage{tikz-cd}
-\usepackage{quiver}
+% \usepackage{quiver}
+% ========== Block quiver.sty ========== %
+\usepackage{tikz-cd}
+% \usepackage{amssymb}
+\usetikzlibrary{calc}
+\usetikzlibrary{decorations.pathmorphing}
+\tikzset{curve/.style={settings={#1},to path={(\tikztostart)
+    .. controls ($(\tikztostart)!\pv{pos}!(\tikztotarget)!\pv{height}!270:(\tikztotarget)$)
+    and ($(\tikztostart)!1-\pv{pos}!(\tikztotarget)!\pv{height}!270:(\tikztotarget)$)
+    .. (\tikztotarget)\tikztonodes}},
+    settings/.code={\tikzset{quiver/.cd,#1}
+        \def\pv##1{\pgfkeysvalueof{/tikz/quiver/##1}}},
+    quiver/.cd,pos/.initial=0.35,height/.initial=0}
+\tikzset{tail reversed/.code={\pgfsetarrowsstart{tikzcd to}}}
+\tikzset{2tail/.code={\pgfsetarrowsstart{Implies[reversed]}}}
+\tikzset{2tail reversed/.code={\pgfsetarrowsstart{Implies}}}
+\tikzset{no body/.style={/tikz/dash pattern=on 0 off 1mm}}
+% =========== End block ========== %
   \tikzset{every picture/.style={line width=0.75pt}}
 \usepackage{pgfplots}
   \pgfplotsset{compat=newest}
@@ -34,7 +51,8 @@
 \usepackage{cleveref}
 % \usepackage[hyperref=true,backend=biber,style=alphabetic,backref=true,url=false]{biblatex}
 \usepackage[warnings-off={mathtools-colon,mathtools-overbracket}]{unicode-math}
-\usepackage[default]{fontsetup}
+\usepackage[default,amsbb]{fontsetup}
+  \setmathfont[StylisticSet=1,range=\mathscr]{NewCMMath-Book.otf}
 \usepackage{fancyhdr}
 \usepackage{import}
 
