--- a/preamble.tex
+++ b/preamble.tex
@@ -76,6 +76,8 @@
 \renewcommand{\emptyset}{⌀}
 \newcommand{\acts}{\curvearrowright}
 \newcommand{\xrr}{\xlongrightarrow}
+\newcommand{\lrr}{\longrightarrow}
+\newcommand{\lmt}{\longmapsto}
 \newcommand{\into}{\hookrightarrow}
 \newcommand{\op}{\operatorname}
 
