--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{lecture8.tex}
 \import{chapters/}{lecture9.tex}
 \import{chapters/}{lecture10.tex}
-\chapter{Sheaf Cohomology}
+\chapter{Cohomology Theory of Sheaves and Vector Bundles}
 \import{chapters/}{lecture11.tex}
 \import{chapters/}{lecture12.tex}
 \import{chapters/}{lecture13.tex}
