--- a/main.tex
+++ b/main.tex
@@ -55,11 +55,14 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{lecture8.tex}
 \import{chapters/}{lecture9.tex}
 \import{chapters/}{lecture10.tex}
-\chapter{Cohomology Theory of Sheaves and Vector Bundles}
+\chapter{Cohomology Theory of Sheaves}
 \import{chapters/}{lecture11.tex}
 \import{chapters/}{lecture12.tex}
 \import{chapters/}{lecture13.tex}
 \import{chapters/}{lecture14.tex}
 \import{chapters/}{lecture15.tex}
+\import{chapters/}{lecture16.tex}
+\import{chapters/}{lecture17.tex}
+\import{chapters/}{lecture18.tex}
 
 \end{document}
