--- a/main.tex
+++ b/main.tex
@@ -64,5 +64,11 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{lecture16.tex}
 \import{chapters/}{lecture17.tex}
 \import{chapters/}{lecture18.tex}
+\import{chapters/}{lecture19.tex}
+\import{chapters/}{lecture20.tex}
+\import{chapters/}{lecture21.tex}
+\import{chapters/}{lecture22.tex}
+\import{chapters/}{lecture23.tex}
+\import{chapters/}{lecture24.tex}
 
 \end{document}
