--- a/main.tex
+++ b/main.tex
@@ -70,5 +70,9 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{lecture22.tex}
 \import{chapters/}{lecture23.tex}
 \import{chapters/}{lecture24.tex}
+\import{chapters/}{lecture25.tex}
+\import{chapters/}{lecture26.tex}
+\import{chapters/}{lecture27.tex}
+\import{chapters/}{lecture28.tex}
 
 \end{document}
