--- a/main.tex
+++ b/main.tex
@@ -74,5 +74,7 @@ Latex by 薛皓天 (Haotian Xue)}
 \import{chapters/}{lecture26.tex}
 \import{chapters/}{lecture27.tex}
 \import{chapters/}{lecture28.tex}
+\import{chapters/}{lecture29.tex}
+\import{chapters/}{lecture30.tex}
 
 \end{document}
